--- a/project.json
+++ b/project.json
@@ -18,7 +18,8 @@
         "inlineStyleLanguage": "scss",
         "assets": ["./src/favicon.ico", "./src/assets"],
         "styles": ["./src/styles.scss"],
-        "scripts": []
+        "scripts": [],
+        "baseHref": "/admin/"
       },
       "configurations": {
         "production": {
