chore: rename `widget-admin` -> `crm` (2)

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,7 +24,7 @@
           "error",
           {
             "type": "attribute",
-            "prefix": "widgetAdmin",
+            "prefix": "crm",
             "style": "camelCase"
           }
         ],
