--- a/project.json
+++ b/project.json
@@ -19,7 +19,7 @@
         "assets": ["./src/favicon.ico", "./src/assets"],
         "styles": ["./src/styles.scss"],
         "scripts": [],
-        "baseHref": "/admin/"
+        "baseHref": "/app/"
       },
       "configurations": {
         "production": {
