feat(sign-up/sign-in): implemented endpoints

--- a/project.json
+++ b/project.json
@@ -37,6 +37,12 @@
       },
       "configurations": {
         "production": {
+          "fileReplacements": [
+            {
+              "replace": "src/environments/env.ts",
+              "with": "src/environments/env.production.ts"
+            }
+          ],
           "budgets": [
             {
               "type": "initial",
