--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,7 @@
     "noFallthroughCasesInSwitch": true
   },
   "files": [],
-  "include": [],
+  "include": ["typings/*.d.ts"],
   "references": [
     {
       "path": "./tsconfig.app.json"
