--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "bootstrap": "4.6.1",
     "bootstrap-material-design": "4.1.3",
     "chartist": "^0.9.5",
+    "d3": "^7.8.5",
     "perfect-scrollbar": "^1.5.5",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -55,6 +56,7 @@
     "@swc-node/register": "~1.6.7",
     "@swc/core": "~1.3.85",
     "@types/chartist": "^1.0.0",
+    "@types/d3": "^7.4.3",
     "@types/jest": "^29.4.0",
     "@types/jquery": "^3.5.29",
     "@types/node": "18.16.9",
