--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "bootstrap-material-design": "4.1.3",
     "chartist": "^0.9.5",
     "d3": "^7.8.5",
+    "jquery-notifier": "^1.0.3",
     "perfect-scrollbar": "^1.5.5",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
