--- a/project.json
+++ b/project.json
@@ -18,8 +18,7 @@
         "inlineStyleLanguage": "scss",
         "assets": ["./src/favicon.ico", "./src/assets"],
         "styles": ["./src/styles.scss"],
-        "scripts": [],
-        "baseHref": "/app/"
+        "scripts": []
       },
       "configurations": {
         "production": {
