--- a/project.json
+++ b/project.json
@@ -17,10 +17,7 @@
         "tsConfig": "./tsconfig.app.json",
         "inlineStyleLanguage": "scss",
         "assets": ["./src/favicon.ico", "./src/assets"],
-        "styles": [
-          "./node_modules/@angular/material/prebuilt-themes/azure-blue.css",
-          "./src/styles.scss"
-        ],
+        "styles": ["./src/styles.scss"],
         "scripts": []
       },
       "configurations": {
